[refactor] Refactors styles to use code from Master
 - Moves current styles into subfolders
 - Adds variable files
 - Adds FiraSans font as an asset

--- a/app/stylesheets/_components.scss
+++ b/app/stylesheets/_components.scss
@@ -1,19 +1,20 @@
-/* COMPONENTS - Import of all component styles
+/* COMPONENTS - Imports all component styles
 ======================================================================= */
 
-@import '~app/components/Img/Img.scss';
-@import '~app/components/Link/Link.scss';
-@import '~app/components/Button/Button.scss';
 @import '~app/components/BookList/BookList.scss';
 @import '~app/components/BookListItem/BookListItem.scss';
+@import '~app/components/Button/Button.scss';
 @import '~app/components/ChapterList/ChapterList.scss';
 @import '~app/components/ChapterListItem/ChapterListItem.scss';
+@import '~app/components/Img/Img.scss';
+@import '~app/components/Link/Link.scss';
+@import '~app/components/PageList/PageList.scss';
+@import '~app/components/PageListItem/PageListItem.scss';
 
-@import '~app/containers/Layout/Layout.scss';
-@import '~app/containers/Routes/Routes.scss';
 @import '~app/containers/BookView/BookView.scss';
-@import '~app/containers/PageView/PageView.scss';
 @import '~app/containers/ChapterView/ChapterView.scss';
+@import '~app/containers/Layout/Layout.scss';
 @import '~app/containers/LibraryView/LibraryView.scss';
 @import '~app/containers/NotFoundView/NotFoundView.scss';
+@import '~app/containers/PageView/PageView.scss';
 @import '~app/containers/SettingsView/SettingsView.scss';
